--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -174,6 +174,7 @@ jobs:
             -w /workspace \
             ubuntu:20.04 \
             bash -c "
+              set -e
               # Install JDK 17 from AdoptOpenJDK
               apt-get update
               apt-get install -y wget apt-transport-https gnupg unzip
@@ -253,6 +254,7 @@ jobs:
             -w /workspace \
             ubuntu:24.04 \
             bash -c "
+              set -e
               # Install JDK 17
               apt-get update
               apt-get install -y openjdk-17-jdk unzip
@@ -296,6 +298,7 @@ jobs:
             -w /workspace \
             rockylinux:8 \
             bash -c "
+              set -e
               # Install JDK 17
               dnf install -y java-17-openjdk java-17-openjdk-devel unzip
 
@@ -339,6 +342,7 @@ jobs:
             -w /workspace \
             rockylinux:9 \
             bash -c "
+              set -e
               # Install JDK 17
               dnf install -y java-17-openjdk java-17-openjdk-devel unzip
 
@@ -387,6 +391,7 @@ jobs:
             -w /workspace \
             eclipse-temurin:17-jdk \
             bash -c "
+              set -e
               # Verify native library in JAR
               echo 'Checking linux-aarch64 library in JAR:'
               unzip -l target/libre2-java-*.jar | grep 'linux-aarch64/libre2.so'
@@ -425,6 +430,7 @@ jobs:
             -w /workspace \
             ubuntu:24.04 \
             bash -c "
+              set -e
               # Install JDK 17
               apt-get update
               apt-get install -y openjdk-17-jdk unzip
@@ -470,6 +476,7 @@ jobs:
             -w /workspace \
             rockylinux:9 \
             bash -c "
+              set -e
               # Install JDK 17
               dnf install -y java-17-openjdk java-17-openjdk-devel unzip
 
