Skip performance assertions under QEMU emulation
Instead of relaxing thresholds, skip the specific performance assertions
when running in QEMU-emulated ARM64 environments. This maintains strict
thresholds for native execution while avoiding false failures on slow
emulated builds.

Changes:
- Add QEMU_EMULATION=true env var to ARM64 Docker runs in workflow
- Add isQemuEmulation() helper to detect emulation in tests
- ConcurrencyTest: Skip hit rate assertion (>=90%) under QEMU
- CachePerformanceTest: Skip throughput assertions (50K/100K ops/sec) under QEMU

--- a/.github/workflows/test-platforms.yml
+++ b/.github/workflows/test-platforms.yml
@@ -426,6 +426,7 @@ jobs:
         run: |
           # Run tests in Ubuntu 22.04 ARM64 Docker container with JDK 17
           docker run --rm --platform linux/arm64 \
+            -e QEMU_EMULATION=true \
             -v "$(pwd):/workspace" \
             -v ~/.m2:/root/.m2 \
             -w /workspace \
@@ -476,6 +477,7 @@ jobs:
         run: |
           # Run tests in Ubuntu 24.04 ARM64 Docker container with JDK 17
           docker run --rm --platform linux/arm64 \
+            -e QEMU_EMULATION=true \
             -v "$(pwd):/workspace" \
             -v ~/.m2:/root/.m2 \
             -w /workspace \
@@ -530,6 +532,7 @@ jobs:
         run: |
           # Run tests in Rocky Linux 9 ARM64 container with JDK 17
           docker run --rm --platform linux/arm64 \
+            -e QEMU_EMULATION=true \
             -v "$(pwd):/workspace" \
             -v ~/.m2:/root/.m2 \
             -w /workspace \
